2007-10-17  Dan Williams  <dcbw@redhat.com>

	* nm-applet.desktop
		- Remove OnlyShowIn; the applet is supposed to be shown anywhere anyway
			(rh #336021)

2007-10-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
	  src/wireless-security/eap-method-ttls.h
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method-simple.h
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method.h
	  src/wireless-security/Makefile.am
	  src/wireless-security/ws-wpa-eap.c
		- Add EAP-TTLS and a few simple EAP phase2 widgets

2007-10-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_context_menu_update): Wireless Enabled item should be insensitive
			when wireless is disabled in hardware and when NM is asleep

2007-10-16  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-leap.c
		- (show_toggled_cb, eap_method_leap_new): hook up "Show Password"
			checkbox

2007-10-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Add EAP-LEAP widget

	* src/wireless-security/wireless-security.h
	  src/wireless-security/wireless-security.c
		- (wireless_security_get_g_type): new function; return GType for
			WirelessSecurity objects
		- (wireless_security_ref, wireless_security_unref): add refcounting
			capability to WirelessSecurity objects
		- (wireless_security_destroy): remove; use refcounting instead
		- (wireless_security_init): centralize common WirelessSecurity init code

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/ws-wep-passphrase.c
		- Use common WirelessSecurity init code
		- Fix xml->glade_file typo in init method of some WirelessSecurity objects

	* src/wireless-security/eap-method.h
	  src/wireless-security/eap-method.c
		- (eap_method_get_g_type): new function; return GType for EAPMethod
			objects
		- (eap_method_ref, eap_method_unref): add refcounting capability to
			EAPMethod objects